# plub_plub

./: .gitattributes  .gitignore  LICENSE  README.md  projectSet.psf
MCU/: .cproject  .project  plub_plub Debug.launch  plub_plub.ioc
MCU/Core/Inc/: can.h  hall_sensor.h  main.h  motor_control.h
MCU/Core/Inc/Backup/: can.h.bak  hall_sensor.h.bak  motor_control.h.bak  stm32f3xx_it.h.bak
MCU/Core/Src/: can.c  dependencies.txt  hall_sensor.c  main.c  motor_cotrol.c  stm32f3xx_it.c
MCU/Core/Src/Backup/: can.c.bak  hall_sensor.c.bak  main.c.bak  motor_control.c.bak  motor_cotrol.c.bak  stm32f3xx_hal_msp.c.bak  stm32f3xx_it.c.bak
motors_system_analysis/: FULL DATA.mat
plub_plub/: .cproject  .mxproject  .project  plub_plub.ioc
plub_plub/Core/Inc/: can.h  hall_sensor.h  main.h  motor_control.h  stm32f3xx_it.h
plub_plub/Core/Inc/Backup/: can.h.bak  hall_sensor.h.bak  motor_control.h.bak
plub_plub/Core/Src/: can.c  dependencies.txt  hall_sensor.c  main.c  motor_cotrol.c  stm32f3xx_hal_msp.c  stm32f3xx_it.c
plub_plub/Core/Src/Backup/: can.c.bak  hall_sensor.c.bak  main.c.bak  motor_control.c.bak  motor_cotrol.c.bak  stm32f3xx_it.c.bak
plub_plub/Debug/: makefile  objects.list  plub_plub.list
plub_plub/Debug/Core/Src/: can.cyclo  can.su  hall_sensor.cyclo  hall_sensor.su  main.cyclo  main.su  motor_cotrol.cyclo  motor_cotrol.su  stm32f3xx_hal_msp.cyclo  stm32f3xx_hal_msp.su  stm32f3xx_it.cyclo  stm32f3xx_it.su  subdir.mk
plub_plub/Debug/Drivers/STM32F3xx_HAL_Driver/Src/: subdir.mk
plub_plub_ws/src/: nav2_params.yaml
plub_plub_ws/src/can_communication/: package.xml  setup.py
plub_plub_ws/src/can_communication/can_communication/: can_node.py
plub_plub_ws/src/can_communication/launch/: can.launch.py
plub_plub_ws/src/mecanum_drive/: CMakeLists.txt  package.xml  setup.py
plub_plub_ws/src/mecanum_drive/action/: GoToPose.action
plub_plub_ws/src/mecanum_drive/launch/: mecanum_launch.py
plub_plub_ws/src/mecanum_drive/mecanum_drive/: controller.py  encoder.py  mecanum_drive_controller.py  mecanum_drive_odometry.py  odometry.py
plub_plub_ws/src/rtab/: package.xml  setup.cfg  setup.py
plub_plub_ws/src/rtab/launch/: rtab.launch.py
plub_plub_ws/src/run/: package.xml  setup.py
plub_plub_ws/src/run/launch/: run.launch.py
plub_plub_ws/src/run/run/: run.py
