<?xml version="1.0"?>
<package format="3">
  <name>mecanum_drive</name>
  <version>1.0.0</version>
  <description>ROS 2 port of the mecanum drive package</description>
  <maintainer email="david.dudas@outlook.com">David Dudas</maintainer>
  <license>BSD</license>

   <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>action_msgs</exec_depend>

  <member_of_group>ros2</member_of_group>
  
  <export>
   <build_type>ament_python</build_type>
  </export>

</package>

