<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>run</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="asil@todo.todo">asil</maintainer>
  <license>TODO: License declaration</license>

  <depend>can_communication</depend>
  <depend>ldlidar_stl_ros2</depend>
  <depend>mecanum_drive</depend>
v  <depend>rtab</depend>
  <depend>depthai_ros_driver</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
